2021-02-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (ProcessStyleClassDefs): Fix memory leak upon
        malformed class name list.  Addresses oss-fuzz 31234
        "graphicsmagick:coder_SVG_fuzzer: Direct-leak in MagickMalloc".

2021-02-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLCDataBlock): Fix leak of value from
        xmlNewCDataBlock().  Addresses oss-fuzz 31400
        "graphicsmagick:coder_MSL_fuzzer: Direct-leak in
        xmlNewCDataBlock".

2021-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (ProcessStyleClassDefs): Fix non-terminal loop
        caused by a self-referential list which results in huge memory
        usage.  Addresses oss-fuzz 31238 "graphicsmagick:coder_SVG_fuzzer:
        Out-of-memory in coder_SVG_fuzzer".

2021-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (SVGStartElement): Reject impossibly small bounds
        and view_box width or height.  Addresses oss-fuzz 31224
        "graphicsmagick:coder_SVG_fuzzer: Divide-by-zero in
        SVGStartElement".

        * coders/msl.c (MSLPushImage): Only clone attributes if not null.
        Should address oss-fuzz 31205 "graphicsmagick:coder_MSL_fuzzer:
        ASSERT: image != (Image *) NULL".

        * coders/jp2.c (ReadJP2Image): Validate that actual file header
        does appear to be a supported format regardless of 'magick' being
        forced.  Jasper appears to dispatch to other libraries if it
        detects a known format it supports and then the program exits if
        there is a problem.  Fixes oss-fuzz 31200
        "graphicsmagick:coder_JPC_fuzzer: Unexpected-exit in error_exit".

2021-02-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/nt_base.c (NTGhostscriptFind,NTGhostscriptGetString):
        Handle Ghostscript point versions added after 9.52.  Fixes
        SourceForge issue #636 'Failed to find Ghostscript' with