@@ -39,7 +39,12 @@
 <blockquote>
 * coders/svg.c (ProcessStyleClassDefs): Fix memory leak upon
 malformed class name list.  Addresses oss-fuzz 31234
-&quot;graphicsmagick:coder_SVG_fuzzer: Direct-leak in MagickMalloc&quot;.</blockquote>
+&quot;graphicsmagick:coder_SVG_fuzzer: Direct-leak in MagickMalloc&quot;.
+(ProcessStyleClassDefs): Fix non-terminal loop and huge memory
+allocation caused by self-referential list.  Not sure if
+implementation is as intended, but it does not crash. Addresses
+oss-fuzz &quot;graphicsmagick:coder_SVG_fuzzer: Out-of-memory in
+coder_SVG_fuzzer&quot;.</blockquote>
 <p>2021-02-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 * coders/msl.c (MSLCDataBlock): Fix leak of value from
